fix: scrollbar color

--- a/src/app/css/scrollbar.css
+++ b/src/app/css/scrollbar.css
@@ -4,9 +4,9 @@
   body {
     --scrollbar-width: 0.5rem;
     --scrollbar-border-radius: 0.25rem;
-    --scrollbar-track-background: var(--color-background);
-    --scrollbar-thumb-background: var(--color-default);
-    --scrollbar-thumb-hover-background: var(--color-default);
+    --scrollbar-track-background: var(--background);
+    --scrollbar-thumb-background: var(--default);
+    --scrollbar-thumb-hover-background: var(--default);
   }
 }
 
